feat: ajuste de posicionamento da badge

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -124,3 +124,13 @@ img {
 .current {
     color: #e34a04 !important;
 }
+.badge {
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.badge a {
+    color:#bfbfbf;
+}
