--- a/public/css/home.css
+++ b/public/css/home.css
@@ -4,6 +4,15 @@ body, h1, h2, p, ul, li {
     padding: 0;
     user-select: none;
 }
+.divider {
+    display: flex;
+    justify-content: center;
+}
+hr {
+    width: 80%;
+    border: 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
 
 body {
     font-family: 'Fira Code', monospace;
@@ -57,6 +66,16 @@ body {
 }
 #projects h2 {
     padding: 26px 0;
+    color: #c0512b;
+}
+#projects h4 {
+    color: #70acdd;
+}
+.projects__description {
+    margin-bottom: 8px;
+}
+.projects__content {
+    margin-top: 8px;
 }
 
 /* Contact section */
@@ -131,6 +150,9 @@ img {
     width: 100%;
     font-size: 30px;
     box-shadow: 0 10px 100px rgba(0,0,0,.1);
+}
+.card__text{
+    text-align: left;
 }
 
 .glass-menu ul {
